--- a/components/block.html
+++ b/components/block.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   </section>
-  <section class="block block__dark block--skewed-left">
+  <section class="block block--dark block--skewed-left">
     <div class="container">
         <h2 class="block__heading">Heading</h2>
         <p>
