--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
 h1, h2, h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
+    line-height: 1.1;
 }
 
 h1 {
@@ -544,7 +545,6 @@ a {
 .block {
     --padding-vertical: 6rem;
     padding: var(--padding-vertical);
-    border: 2px solid red;
 }
 
 .block__header {
@@ -555,12 +555,12 @@ a {
     margin-top: 0;
 }
 
-.block__dark {
+.block--dark {
     background: #000;
     color: 7b858b;
 }
 
-.block__dark .block__heading {
+.block--dark .block__heading {
     color: #fff;
 }
 
@@ -634,4 +634,27 @@ a {
     .nav__item {
         border: 0;
     }
+}
+
+/* Hero */
+.hero {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+.hero__tagline {
+    font-size: 2rem;
+    color: #b9c3cf;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+}
+.hero__image {
+    width: 100%;
+}
+@media screen and (min-width: 768px) {
+    .hero{
+        padding-top: 0;
+    }
+    .hero__content {
+    text-align: left;
+    align-self: center;
+}
 }
