--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,10 @@ a {
 }
 
 /* Plans */
+.plan {
+    transition: transform 0.2s ease-out;
+}
+
 .plan__name {
     color: #fff;
     margin: 0;
@@ -356,6 +360,10 @@ a {
     position: relative;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header::before {
     content: url(../images/popular.svg);
     width: 40px;
@@ -363,6 +371,13 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -690,4 +705,14 @@ a {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+
+/* Plan Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
